Major config refactor